--- a/src/app/main/layout/customer-reports/escalations/escalations.component.html
+++ b/src/app/main/layout/customer-reports/escalations/escalations.component.html
@@ -290,6 +290,97 @@
                     </div>
                 </div>
             </div>
+            <div class="tile" *ngIf="tab === 3">
+                <div class="tile-body">
+                    <div class="col-sm-12">
+                        <div class="row form-group">
+                            <div class="col-sm-2 col-12">
+                                <label> Driver Phone number/Bus number/PNR : </label>
+                                <input class="form-control form-control-sm"  placeholder="Search here" [(ngModel)]="query.key">
+                            </div>
+                            <div class="col-sm-2 col-12">
+                                <label>Rating : </label>
+                                <select [(ngModel)]="query.rating" [ngModelOptions]="{standalone: true}"
+                                        class="form-control form-control-sm"
+                                        (ngModelChange)="getAllSearchComplaints()">
+                                    <option value="" selected>--Selected Rating--</option>
+                                    <option value="0">All</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+                            </div>
+                            <div class="col-sm-2 col-12 mt-3">
+                                <a class="btn btn-sm btn-primary" (click)="getAllSearchComplaints()">Search</a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-9">
+                                <div class="card" *ngFor="let escalation of allSearchComplaints; let i = index;" style="margin: 15px 0;">
+                                    <div class="card-header" style="align-items: center;padding: 8px 15px !important;">
+                                        <div class="flex-container">
+                                            <div class="service-card">{{(query.page - 1) * query.size + i + 1}}</div>
+                                            <div class="service-card"><label>Service
+                                                Name:</label><b>{{escalation.serviceName || 'NA'}}</b></div>
+                                            <div class="service-card"><label>Vehicle
+                                                Number:</label><b>{{escalation.vehicleNumber || 'NA'}}</b></div>
+                                        </div>
+                                    </div>
+                                    <div class="card-body" style="padding: 12px !important;">
+                                        <div class="flex-container">
+                                            <div class="service-card">
+                                                <label>Feedback:</label> {{escalation.feedback || 'NA'}} </div>
+                                            <div class="service-card"><label>Journey Date:</label> {{escalation.jdate || 'NA'}}
+                                            </div>
+                                            <div class="service-card"><label>PNR:</label>{{escalation.pnr || 'NA' }}
+                                                - {{escalation.seats || 'NA'}}</div>
+                                            <div class="service-card"><label>Booked By:</label>{{escalation.bookedBy || 'NA'}}
+                                            </div>
+                                            <div class="service-card"><label>Called By:</label>{{escalation.calledBy || 'NA'}}
+<!--                                                <b>Service:</b> {{escalation.serviceName}} - {{escalation.vehicleNumber}}-->
+                                            </div>
+                                            <div class="service-card">
+                                                <label>Service: </label> {{escalation.serviceName || 'NA'}} - {{escalation.vehicleNumber || 'NA'}}
+                                            </div>
+                                            <div class="service-card"><label>Passenger:</label>{{ escalation.name || 'NA' }} -
+                                                <b>{{ escalation.phone || 'NA'}}</b> - {{escalation.email || 'NA'}}</div>
+                                            <div class="service-card"><label>RedBus Review &
+                                                Rating:</label>{{escalation.redbusReview || 'NA'}}
+                                                - {{escalation.redbusRating || 'NA'}}
+                                                - {{escalation.redbusReviewTags || 'NA'}}
+                                            </div>
+                                            <div class="service-card"><label>Staff:</label>
+                                                <span *ngFor="let staff of escalation.staffDetails; let j = index;">
+                                                  {{j + 1}} - {{staff.name}} - <b>{{staff.number}}</b>,
+                                                </span>
+                                            </div>
+                                            <div class="service-card" style="font-size: 12px !important;">
+                                                <a class="cus-a mr-2" title="Add Comment"
+                                                   (click)="addingComments(escalation.id, 'search')">
+                                                    <i class="fa fa-comment fa-1x" aria-hidden="true"
+                                                       style="color: green"> Add Comment</i>
+                                                </a>
+                                                <a class="cus-a mr-2" title="Resolve"
+                                                   (click)="resolveBookingFeedback(escalation.id, 'search')">
+                                                    <i class="fa fa-recycle fa-1x" aria-hidden="true"
+                                                       style="color: deepskyblue"></i> Resolve
+                                                </a>
+                                                <a class="cus-a mr-2" title="Send Email"
+                                                   (click)="sendEmail(escalation.id, 'search')">
+                                                    <i class="fa fa-envelope fa-1x" aria-hidden="true"
+                                                       style="color: indianred"></i> Send Email
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
