--- a/src/app/main/layout/customer-reports/service-feedback/service-feedback-report/service-feedback-report.component.html
+++ b/src/app/main/layout/customer-reports/service-feedback/service-feedback-report/service-feedback-report.component.html
@@ -78,7 +78,7 @@
                                             <button class="btn btn-primary btn-sm" (click)="sendThankYouMessage(feedback)" title="Thank you">
                                                 <i class="fa fa-whatsapp">ThankYou</i>
                                             </button>
-                                            <button class="btn btn-primary btn-sm" (click)="sendApologies(feedback)" title="Send Apologies">
+                                            <button class="btn btn-primary btn-sm m-2" (click)="sendApologies(feedback)" title="Send Apologies">
                                                 <i class="fa fa-whatsapp">Sorry</i>
                                             </button>
 
