--- a/src/app/main/layout/customer-reports/escalations/escalations.component.html
+++ b/src/app/main/layout/customer-reports/escalations/escalations.component.html
@@ -371,6 +371,11 @@
                                                     <i class="fa fa-envelope fa-1x" aria-hidden="true"
                                                        style="color: indianred"></i> Send Email
                                                 </a>
+                                                <a class="cus-a mr-2" title="Escalate"
+                                                   (click)="escalateTicket(escalation.id, 'search')">
+                                                    <i class="fa fa-bullhorn fa-1x" aria-hidden="true"
+                                                       style="color: indianred"></i> Escalate
+                                                </a>
                                             </div>
                                         </div>
                                         <div class="flex-container">
