Adding comments display

--- a/src/app/main/layout/customer-reports/escalations/escalations.component.html
+++ b/src/app/main/layout/customer-reports/escalations/escalations.component.html
@@ -130,6 +130,13 @@
                                                        style="color: indianred"></i> Send Email
                                                 </a>
                                             </div>
+                                            <div class="flex-container">
+                                                Comments:
+                                                <div *ngFor="let comment of escalation.escalationComments; let i = index;" class="service-card">
+                                                    {{comment.comment}} <span style="color: initial"><i><b>- {{comment.addedBy}} - {{comment.addedOn}}</b></i></span>
+                                                    <br/>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -259,6 +266,13 @@
                                                     <i class="fa fa-envelope fa-1x" aria-hidden="true"
                                                        style="color: indianred"></i> Send Email
                                                 </a>
+                                            </div>
+                                            <div class="flex-container">
+                                                Comments:
+                                                <div *ngFor="let comment of escalation.escalationComments; let i = index;" class="service-card">
+                                                    {{comment.comment}} <span style="color: initial"><i><b>- {{comment.addedBy}} - {{comment.addedOn}}</b></i></span>
+                                                    <br/>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
